--- a/style1.css
+++ b/style1.css
@@ -162,7 +162,7 @@ ul {
     padding-right: 20px;
     padding-top: 19px;
     margin: 0;
-    color: white;
+    color: #2b6d3c;
     cursor: default;
 }
 
