--- a/style1.css
+++ b/style1.css
@@ -109,7 +109,7 @@ ul {
     display: none;
 }
 
-#amerika {
+#drank {
     font-weight: 500;
     font-size: 30px;
     padding-left: 200px;
@@ -147,7 +147,7 @@ ul {
     border: 1px solid white;
 }
 
-#italië {
+#diner {
     font-weight: 500;
     font-size: 30px;
     padding-left: 75px;
